--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@
     --card-background: rgba(255, 255, 255, 0.2);
     --shadow-color: rgba(0, 0, 0, 0.1);
     --border-color: rgba(255, 255, 255, 0.3);
-    --blue-gradient-start: #89f7fe;
-    --blue-gradient-end: #66a6ff;
+    --blue-gradient-start: #43A9F1;
+    --blue-gradient-end: #3890F4;
     --sunset-gradient-start: #DCAB07;
     --sunset-gradient-end: #CC7006;
     --night-gradient-start: #0f2027;
@@ -22,37 +22,81 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    transition: color 0.5s
+}
+
+@keyframes gradient-animation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+@property --gradColorStart {
+    syntax: '<color>';
+    initial-value: var(--gradient-start);
+    inherits: false;
+}
+
+@property --gradColorEnd {
+    syntax: '<color>';
+    initial-value: var(--gradient-end);
+    inherits: false;
 }
 
 body {
+    --gradColorStart: #8e9eab;
+    --gradColorEnd: #eef2f3;
     font-family: 'Plus Jakarta Sans', sans-serif;
-    background: linear-gradient(135deg, var(--gradient-start), var(--gradient-end));
+    background: linear-gradient(135deg, var(--gradColorStart), var(--gradColorEnd));
+    background-size: 200%;
     color: var(--primary-color);
     line-height: 1.6;
-    padding: 2rem;
+    /* padding: 2rem; */
+    width: 70%;
     min-height: 100vh;
     background-attachment: fixed;
-    transition: background 0.5s ease;
+    transition:
+        --gradColorStart 2s,
+        --gradColorEnd 2s;
+    animation:
+        gradient-animation 40s ease infinite;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    margin: auto;
 }
 
 body.weather-clear {
-    background: linear-gradient(135deg, var(--sunset-gradient-start), var(--sunset-gradient-end));
+    --gradColorStart: #43A9F1;
+    --gradColorEnd: #3890F4;
+    /* background: linear-gradient(135deg, var(--sunset-gradient-start), var(--sunset-gradient-end)); */
     color: var(--text-color);
 }
 
 body.weather-cloudy {
-    background: linear-gradient(135deg, var(--blue-gradient-start), var(--blue-gradient-end));
+    --gradColorStart: #DCAB07;
+    --gradColorEnd: #CC7006;
+    /* background: linear-gradient(135deg, var(--blue-gradient-start), var(--blue-gradient-end)); */
     color: var(--text-color);
 }
 
 body.weather-night {
-    background: linear-gradient(135deg, var(--night-gradient-start), var(--night-gradient-end));
+    --gradColorStart: #0f2027;
+    --gradColorEnd: #203a43;
+    /* background: linear-gradient(135deg, var(--night-gradient-start), var(--night-gradient-end)); */
     color: var(--text-color);
 }
 
 .container {
-    max-width: 500px;
-    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -60,51 +104,54 @@ body.weather-night {
 }
 
 .logo {
+    height: 48px;
+    color: inherit;
+}
+
+.logo * {
+    fill: currentColor;
+}
+
+/* .logo {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
     padding: 1rem;
     text-align: center;
     width: auto;
-}
-
-.logo img {
-    width: 50px;
-    height: 50px;
-}
-
-.logo-text {
-    font-size: 1.8rem;
-    font-weight: bold;
-    color: var(--primary-color);
-}
+} */
 
 .search-box {
-    width: 100%;
-    max-width: 400px;
+    /* width: 100%; */
+    /* max-width: 400px; */
+    display: inline-flex;
     position: relative;
     margin-bottom: 2rem;
+
+    padding: 1rem 3rem 1rem 1.5rem;
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    border-radius: 50px;
+    transition: background-color 0.25s;
 }
 
 .search-box input {
-    width: 100%;
-    padding: 1rem 3rem 1rem 1.5rem;
+    /* width: 100%; */
+    background: transparent;
     border: none;
-    border-radius: 50px;
     font-size: 1rem;
-    background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(10px);
-    color: var(--primary-color);
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    color: inherit;
+    /* box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); */
+    outline: none;
 }
+
+.search-box i { color: inherit; }
 
 .search-box input::placeholder {
     color: rgba(51, 51, 51, 0.7);
 }
 
-.search-box input:focus {
-    outline: none;
+.search-box:focus-within {
     background: rgba(255, 255, 255, 0.3);
 }
 
@@ -113,25 +160,103 @@ body.weather-night {
     right: 1.5rem;
     top: 50%;
     transform: translateY(-50%);
-    color: var(--primary-color);
+    color: var(--text-color);
     opacity: 0.7;
 }
 
+.dateTime {
+    display: inline-flex;
+    align-items: center;
+    gap: 16px;
+    padding: 12px 16px;
+
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 999px;
+    box-shadow:
+        0 8px 20px hsla(0 0 0 / .1),
+        inset 0 4px 50px hsla(0 0 100% / .2);
+}
+
+.dateTime > i {
+    font-size: 40px;
+}
+
+.dateTime .time {
+    font-size: 1.25rem;
+    line-height: 1;
+    font-weight: 600;
+}
+
+.detailed {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    padding-inline-end: 12px;
+}
+
+/* .time {
+    display: flex;
+    padding: 12px;
+    gap: 8px;
+} */
+
 .weather-app {
     width: 100%;
+    overflow: hidden;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    align-items: start;
+    overflow: visible;
+}
+
+
+/* .weather-app > div {} */
+
+.weather-app .content {
+    display: flex;
+    gap: 24px;
+    width: 100%;
+}
+
+.weather-app .content > div {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    align-items: start;
+}
+
+/* .weather-info {
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
     border-radius: 30px;
-    overflow: hidden;
+    text-align: center;
+    width: 500px;
+    padding: 40px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
-    padding: 2rem;
+} */
+
+.weather-app #weatherInfo .card {
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    border-radius: 20px;
+    /* text-align: center; */
+    width: 500px;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+    box-shadow:
+        0 8px 20px hsla(0 0 0 / .2),
+        inset 0 4px 60px hsla(0 0 100% / .2);
 }
 
-.weather-card {
-    text-align: center;
-    padding-bottom: 2rem;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    margin-bottom: 2rem;
+.weather-summary {
+    display: flex;
+    gap: 20px;
+    align-items: start;
 }
 
 .location {
@@ -153,8 +278,8 @@ body.weather-night {
 .temperature-display {
     display: flex;
     align-items: flex-start;
-    justify-content: center;
-    margin: 1rem 0;
+    /* justify-content: center; */
+    /* margin: 1rem 0; */
 }
 
 .temp-value {
@@ -169,17 +294,22 @@ body.weather-night {
 }
 
 .description {
-    font-size: 1.5rem;
-    font-weight: 500;
+    font-size: 2rem;
+    font-weight: 700;
     margin-bottom: 1.5rem;
 }
 
+span.separator {
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+    margin: 0 2px;
+}
+
 .temp-range {
-    display: inline-flex;
+    display: flex;
     background: rgba(255, 255, 255, 0.2);
-    padding: 0.5rem 1.5rem;
+    padding: 12px 20px;
     border-radius: 50px;
-    gap: 1.5rem;
+    gap: 20px;
     margin-bottom: 2rem;
 }
 
@@ -211,27 +341,24 @@ body.weather-night {
     opacity: 0.8;
 }
 
-.detail-value {
-    font-size: 1.1rem;
-    font-weight: 600;
-}
-
 .detail-label {
     font-size: 0.85rem;
     opacity: 0.8;
 }
 
-.forecast-section h3 {
-    margin-bottom: 1rem;
+#forecast-section h3 {
+    /* margin-bottom: 1rem; */
     font-size: 1.3rem;
     font-weight: 600;
+    line-height: 48px;
 }
 
 .forecast-list {
     display: flex;
     gap: 1rem;
-    overflow-x: auto;
-    padding: 0.5rem 0 1.5rem;
+    /* overflow-x: visible; */
+    height: 100%;
+    /* padding: 0.5rem 0 1.5rem; */
     cursor: grab;
     user-select: none;
     -webkit-user-select: none;
@@ -248,12 +375,24 @@ body.weather-night {
 }
 
 .forecast-item {
-    background: rgba(255, 255, 255, 0.2);
+    background: linear-gradient(
+        rgba(255, 255, 255, 0.1),
+        rgba(255, 255, 255, 0.2)
+    );
     padding: 1rem;
     border-radius: 15px;
     text-align: center;
     min-width: 100px;
     cursor: grab;
+    box-shadow: 0 8px 20px hsla(0 0 0 / .2);
+
+    transition: box-shadow 0.25s;
+}
+
+.forecast-item:hover {
+    box-shadow:
+        0 8px 20px hsla(0 0 0 / .2),
+        inset 0 0 0 999px hsla(0 0 100% / .2);
 }
 
 .forecast-item:active {
@@ -287,27 +426,27 @@ body.weather-night {
     body {
         padding: 1rem;
     }
-    
+
     .container {
         gap: 1.5rem;
     }
-    
+
     .weather-app {
         padding: 1.5rem;
     }
-    
+
     .temp-value {
         font-size: 4.5rem;
     }
-    
+
     .temp-unit {
         font-size: 2rem;
     }
-    
+
     .weather-details {
         flex-direction: column;
     }
-    
+
     .detail {
         width: 100%;
     }
